@@ -5,7 +5,6 @@
 GENERAL:
 
 - Table DCI
-- Access to current node properties in NXSL scripts
 - Finish Linux subagent
 - Finish FreeBSD subagent
 - Finish Solaris subagent
