@@ -1,0 +1,7 @@
+; nxuilibw.def : Declares the module parameters for the DLL.
+
+LIBRARY      "nxuilibw"
+DESCRIPTION  'NetXMS Windows UI Dynamic Link Library (UNICODE)'
+
+EXPORTS
+    ; Explicit exports can go here
